# libminerva

./: CMakeLists.txt  README.md  avr.mk
compiler/: minerva_compile.py
docs/: porting_guide.md  threat_model.md
examples/atmega328p_classify/: Makefile  demo_model.npz  main.c
include/: minerva.h  mnv_config.h  mnv_types.h
src/arch/: mnv_bnn.c  mnv_bnn.h  mnv_cnn1d.c  mnv_cnn1d.h  mnv_mlp.c  mnv_mlp.h
src/core/: mnv_engine.c  mnv_fixed.c  mnv_fixed.h
src/hal/: mnv_hal.h  mnv_hal_avr.c  mnv_hal_host.c
src/security/: mnv_blake2s.c  mnv_blake2s.h  mnv_chacha20.c  mnv_chacha20.h  mnv_ct.c  mnv_ct.h  mnv_lut.c  mnv_lut.h  mnv_outauth.c  mnv_outauth.h  mnv_prng.h
tests/host/: test_host.c
